# domesticator_3

./: LICENSE  README.md  codon_opt.py  domesticator3.py  pyproject.toml  requirements.txt
domesticator3/: __main__.py  codon_opt.py  domesticator3.py
domesticator3/specifications/: MinimizeNumKmers.py  no_vector.gb
domesticator3/tools/: idt.py  input_parsing.py  product_analysis.py
